# io-profiling

./: README.md
ior_tau/: andes_template.sh  ior_configure
ior_tau/tau_log/hdf5_read/: rank00000.trace  rank00001.trace  rank00002.trace  rank00003.trace
ior_tau/tau_log/hdf5_write/: rank00000.trace  rank00001.trace  rank00002.trace  rank00003.trace
ior_tau/tau_log/mpiio_read/: rank00000.trace  rank00001.trace  rank00002.trace  rank00003.trace
ior_tau/tau_log/mpiio_write/: rank00000.trace  rank00001.trace  rank00002.trace  rank00003.trace
ior_tau/tau_log/posix_read/: rank00000.trace  rank00001.trace  rank00002.trace  rank00003.trace
ior_tau/tau_log/posix_write/: rank00000.trace  rank00001.trace  rank00002.trace  rank00003.trace
skel_io/lammps_outputs/: CMakeLists.txt  create_synthetic_data.cxx  filtered_model.json  model.json  rank00000.cxx  rank00001.cxx  rank00002.cxx  rank00003.cxx  skel_lammps.cxx
